--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activityMain"
     android:screenOrientation = "landscape"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -29,4 +30,5 @@
         android:layout_below="@id/settingsButton"
         android:text="@string/exit"
         android:layout_centerHorizontal="true"/>
+
 </RelativeLayout>
