--- a/app/src/main/res/layout/game_field.xml
+++ b/app/src/main/res/layout/game_field.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/gameFrame"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/gameLayout"
     android:screenOrientation="landscape"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,62 +15,73 @@
         android:layout_height="match_parent"
         tools:context=".GameField" />
 
-    <RelativeLayout
-        android:id="@+id/gameMenu"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".GameField">
+    <ImageButton
+        android:id="@+id/pauseButton"
+        android:src="@drawable/pause_button"
+        android:background="@null"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/gamePause"/>
 
-        <ImageButton
-            android:id="@+id/pauseButton"
-            android:src="@drawable/pause_button"
-            android:background="@null"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true"
-            android:contentDescription="@string/gamePause"/>
+    <ImageButton
+        android:id="@+id/playButton"
+        android:src="@drawable/play_button"
+        android:background="@null"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintRight_toLeftOf="@id/pauseButton"
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/gamePause"/>
 
-        <ImageButton
-            android:id="@+id/playButton"
-            android:src="@drawable/play_button"
-            android:background="@null"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toStartOf="@id/pauseButton"
-            android:contentDescription="@string/gamePause"/>
+    <ImageButton
+        android:id="@+id/restartButton"
+        android:src="@drawable/restart_button"
+        android:background="@null"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintRight_toLeftOf="@id/playButton"
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/gamePause"/>
 
-        <ImageButton
-            android:id="@+id/restartButton"
-            android:src="@drawable/restart_button"
-            android:background="@null"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toStartOf="@id/playButton"
-            android:contentDescription="@string/gamePause"/>
+    <TextView
+        android:id="@+id/health"
+        android:layout_width="300sp"
+        android:layout_height="60sp"
+        android:background="@null"
+        android:textColor="@color/colorBlack"
+        android:textSize="36sp"
+        android:text="@string/defaultHealth"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:fontFamily="@font/ribeye_marrow"/>
 
-        <TextView
-            android:id="@+id/health"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="false"
-            android:background="@null"
-            android:textColor="@color/colorBlack"
-            android:textSize="36sp"
-            android:fontFamily="@font/ribeye_marrow"/>
+    <TextView
+        android:id="@+id/score"
+        android:layout_width="300sp"
+        android:layout_height="60sp"
+        android:background="@null"
+        android:textColor="@color/colorBlack"
+        android:textSize="36sp"
+        android:text="@string/defaultScore"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/health"
+        android:fontFamily="@font/ribeye_marrow"/>
 
-        <TextView
-            android:id="@+id/score"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/health"
-            android:layout_toStartOf="@id/restartButton"
-            android:background="@null"
-            android:textColor="@color/colorBlack"
-            android:textSize="36sp"
-            android:fontFamily="@font/ribeye_marrow"/>
+    <TextView android:id="@+id/message"
+        android:text="@string/gamePause"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@null"
+        android:textColor="@color/colorBlack"
+        android:textSize="36sp"
+        android:fontFamily="@font/ribeye_marrow"
+        android:visibility="gone"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
-    </RelativeLayout>
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
