--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -5,4 +5,6 @@
     <integer name="obstacleOffset">20</integer>
     <integer name="maxHealth">100</integer>
     <integer name="initScore">0</integer>
+    <integer name="defaultVolume">15</integer>
+    <integer name="maxVolume">100</integer>
 </resources>
